// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$autoload should fail with unexisting handlers 1`] = `
Object {
  "errorCode": "E_SERVICE_NOT_FOUND",
  "errorParams": Array [
    "getPing",
  ],
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Service \\"getPing\\" not found in: /home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "requireCalls": Array [],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
}
`;

exports[`$autoload should work for API 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"API\\" found in: /home/whoami/my-whook-project/src/services/API.js",
    ],
    Array [
      "debug",
      "💿 - Loading API initializer from /home/whoami/my-whook-project/src/services/API.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/API.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/API",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "API",
    "path": "/home/whoami/my-whook-project/src/services/API.js",
  },
}
`;

exports[`$autoload should work for a config constant 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "requireCalls": Array [],
  "resolveCalls": Array [],
  "result": Object {
    "initializer": [Function],
    "name": "CONFIG",
    "path": "internal://CONFIG",
  },
}
`;

exports[`$autoload should work for configs 1`] = `
Object {
  "injectorCalls": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"CONFIGS\\" found in: /home/whoami/my-whook-project/src/services/CONFIGS.js",
    ],
    Array [
      "debug",
      "💿 - Loading CONFIGS initializer from /home/whoami/my-whook-project/src/services/CONFIGS.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/CONFIGS.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/CONFIGS",
    ],
  ],
  "result": Object {
    "initializer": Object {
      "CONFIG": Object {
        "testConfig": "test",
      },
    },
    "name": "CONFIGS",
    "path": "/home/whoami/my-whook-project/src/services/CONFIGS.js",
  },
}
`;

exports[`$autoload should work for handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPing\\" found in: /home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /home/whoami/my-whook-project/src/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for handlers hash 1`] = `
Object {
  "HANDLERS": Object {
    "getPing": [Function],
  },
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
    Array [
      Array [
        "API",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "requireCalls": Array [],
  "resolveCalls": Array [],
  "result": Object {
    "initializer": [Function],
    "name": "HANDLERS",
    "path": "internal://HANDLERS",
  },
}
`;

exports[`$autoload should work for handlers in sub plugins 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Service \\"getPing\\" not found in: /home/whoami/my-whook-project/src/handlers/getPing",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPing\\" found in: /var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
    Array [
      "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for name mapped handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPingMock\\" found in: /home/whoami/my-whook-project/src/handlers/getPingMock.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer via getPingMock resolution from /home/whoami/my-whook-project/src/handlers/getPingMock.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPingMock",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPingMock",
    "path": "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
  },
}
`;

exports[`$autoload should work for path mapped handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "📖 - Using INITIALIZER_PATH_MAP to resolve the \${resolvedName} module path.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPing\\" found in: /home/whoami/my-other-project/src/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /home/whoami/my-other-project/src/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-other-project/src/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-other-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for wrapped handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
    Array [
      Array [
        "WRAPPERS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPingWrapped\\" found in: /home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPingWrapped initializer from /home/whoami/my-whook-project/src/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPingWrapped",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work with empty wrappers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
    Array [
      Array [
        "WRAPPERS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPingWrapped\\" found in: /home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPingWrapped initializer from /home/whoami/my-whook-project/src/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPingWrapped",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work with no wrappers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "🚫 - Service \\"getPing\\" found in: /home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /home/whoami/my-whook-project/src/handlers/getPing.js.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "resolveCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;
